[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/cloud_buddy_enemy.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Enemy/cloud_buddy.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.2368, 31.0399 )

[sub_resource type="CircleShape2D" id=2]
radius = 499.021

[sub_resource type="CircleShape2D" id=3]
radius = 47.0913

[node name="CloudBuddy" type="KinematicBody2D" groups=[
"Entity",
"onHit",
]]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.98088, 1.9787 )
frames = ExtResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SightLine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightLine"]
shape = SubResource( 2 )

[node name="Bullet" parent="." instance=ExtResource( 3 )]
position = Vector2( -1.68369, -40.4086 )

[node name="MeleeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeArea"]
shape = SubResource( 3 )
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="SightLine" to="." method="_on_SightLine_body_entered"]
[connection signal="body_exited" from="SightLine" to="." method="_on_SightLine_body_exited"]
[connection signal="body_entered" from="MeleeArea" to="." method="_on_MeleeArea_body_entered"]
